debug: Increase debug output
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -87,7 +87,7 @@ params {
 
 // Configuration profiles for
 profiles {
-    debug { process.beforeScript = 'echo $HOSTNAME' }
+    debug { process.beforeScript = 'echo $HOSTNAME; echo $SHELL; echo $PATH' }
     docker {
         docker.enabled         = true
         docker.userEmulation   = true
