organization: Move configuration into separate files by scope
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,4 +105,4 @@ jobs:
         env:
           NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test${RUN_READTYPE},${RUN_CONTAINER} $RUN_SKIPPING --kraken2_db /kraken2-db
+          nextflow run ${GITHUB_WORKSPACE} -profile test,${RUN_READTYPE},${RUN_CONTAINER} $RUN_SKIPPING --kraken2_db /kraken2-db
