--- a/conf/containers.config
+++ b/conf/containers.config
@@ -13,9 +13,6 @@ process {
     withLabel: edirect {
         container = 'docker.io/ncbi/edirect:12.5'
     }
-    withLabel: filtlong {
-        container = 'quay.io/staphb/filtlong:0.2.1'
-    }
     withLabel: ivar {
         container = 'quay.io/staphb/ivar:1.3'
     }
@@ -36,6 +33,9 @@ process {
     }
     withLabel: multiqc {
         conda   = '-c bioconda -c conda-forge multiqc=1.11'
+    }
+    withLabel: nanofilt {
+        container = 'quay.io/biocontainers/nanofilt:2.8.0--py_0'
     }
     withLabel: nanosim {
         conda   = 'python=3.6 bioconda::nanosim=3.0.2 conda-forge::scikit-learn=0.21.3'
