--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -17,22 +17,25 @@ params {
 
     // Read trimming options (shared)
     trim_minlen      = (params.pe) ? 100 : 300
-    trim_winsize     = (params.pe) ? 50 : 250
-    trim_winqual     = (params.pe) ? 15 : 0.9
+    trim_headcrop    = 0
 
     // Illumina trimming options (Trimmomatic)
     trim_adapters    = 'NexteraPE-PE.fa'
     trim_mismatches  = 2
     trim_pclip       = 30
     trim_clip        = 10
+    trim_winsize     = 50
+    trim_winqual     = 15
     trim_leading     = 15
     trim_trailing    = 15
     trim_crop        = 0
-    trim_headcrop    = 0
 
     // ONT-specific trimming options (Filtlong)
-    trim_keep_percent = 0.9
-    trim_target_bases = 500000000
+    trim_maxlen       = 0
+    trim_meanqual     = 7
+    trim_mingc        = 0
+    trim_maxgc        = 0
+    trim_tailcrop     = 0
 
     // Canu ONT assembly options
     canu_corrected_error_rate = 0.144
