tools: Add FastQC to analysis
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/multiqc_config.yaml
+++ b/multiqc_config.yaml
@@ -1,3 +1,10 @@
 fn_clean_exts:
   - "_R1"
   - "kreport"
+  - ".fastq.gz"
+top_modules:
+  - "fastqc"
+module_order:
+  - fastqc
+  - trimmomatic
+  - kraken
