--- a/conf/containers.config
+++ b/conf/containers.config
@@ -13,6 +13,9 @@ process {
     withLabel: edirect {
         container = 'docker.io/ncbi/edirect:12.5'
     }
+    withLabel: fastqc {
+        container = 'quay.io/staphb/fastqc:0.11.9'
+    }
     withLabel: ivar {
         container = 'quay.io/staphb/ivar:1.3'
     }
@@ -45,6 +48,9 @@ process {
     }
     withLabel: samtools {
         container = 'quay.io/staphb/samtools:1.12'
+    }
+    withLabel: seqtk {
+        container = 'quay.io/staphb/seqtk:1.3'
     }
     withLabel: seqret {
         conda     = 'bioconda::emboss=6.6.0'
