Recover from power outage
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ====================================================================================
-    jev-analysis-pipeline Nextflow config file
+    YAVSAP Nextflow config file
 ====================================================================================
     Default config options for all compute environments
 ------------------------------------------------------------------------------------
@@ -8,13 +8,13 @@
 
 // Process metadata
 manifest {
-    name              = 'jev-analysis-pipeline'
+    name              = 'yavsap'
     author            = 'Thomas A. Christensen II'
-    homePage          = 'https://github.com/MillironX/jev-analysis-pipeline'
-    description       = 'Intra-sample viral population analysis targeted at Japanese Encephalitis'
+    homePage          = 'https://ksumngs.github.io/yavsap'
+    description       = 'Intra-sample viral population analysis'
     mainScript        = 'main.nf'
     nextflowVersion    = '>=20.10.0'
-    version           = '0.1.0-alpha'
+    version           = '0.2.0-alpha'
     recurseSubmodules = true
 }
 
