Initital bootstrap for nanostat
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -43,6 +43,9 @@ process {
     withLabel: nanosim {
         conda   = 'python=3.6 bioconda::nanosim=3.0.2 conda-forge::scikit-learn=0.21.3'
     }
+    withLabel: nanostat {
+        conda   = 'bioconda::nanostat=1.4'
+    }
     withLabel: raxml {
         container = 'docker.io/evolbioinfo/raxml-ng:v1.0.3'
     }
