Add haplink script
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-bin/variantfilter linguist-language=Julia
-bin/haplotype-finder linguist-language=Julia
+bin/haplink linguist-language=Julia
 bin/make-haplotype-fastas linguist-language=Julia
 *.config linguist-language=nextflow
