Rework pipeline workflow for haplink
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/environment.config
+++ b/conf/environment.config
@@ -1,5 +1,8 @@
 // Environment variables to be maintained in process containers
 env {
+    PYTHONNOUSERSITE   = 1
+    R_PROFILE_USER     = '/.Rprofile'
+    R_ENVIRON_USER     = '/.Renviron'
     KRAKEN2_DEFAULT_DB = "${params.kraken2_db}"
     KRAKEN2_DB_PATH    = "${params.kraken2_db}"
 }
