--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -46,9 +46,16 @@ params {
     // SPAdes Illumina assembly options
     spades_mode = 'rnaviral'
 
+    // Variant calling options
+    variant_quality      = (params.pe) ? 30 : 21
+    variant_depth        = (params.pe) ? 10 : 15
+    variant_position     = 0.1
+    variant_frequency    = 0.05
+    variant_significance = 1e-3
+
     // Haplotyping options
     haplotype_significance = 0.05
-    haplotype_minimum      = 10
+    haplotype_depth        = 10
 
     // Boilerplate options
     outdir           = './results'
