--- a/conf/test.config
+++ b/conf/test.config
@@ -32,16 +32,19 @@ profiles {
             trim_minlen     = 100
             trim_winsize    = 50
 
-            trim_keep_percent = 0.999
-            trim_target_bases = 999999999999
-
             canu_corrected_error_rate = 0.2
             canu_min_read_length      = 100
             canu_min_overlap_length   = 50
             canu_stop_on_low_coverage = 3
 
-            haplotype_minimum      = 2
-            haplotype_significance = 1
+            variant_quality      = 10
+            variant_depth        = 2
+            variant_position     = 0.1
+            variant_frequency    = 0.1
+            variant_significance = 0.05
+
+            haplotype_significance = 0.05
+            haplotype_depth        = 2
         }
 
         process {
