--- a/conf/containers.config
+++ b/conf/containers.config
@@ -20,7 +20,7 @@ process {
         container = 'quay.io/staphb/ivar:1.3'
     }
     withLabel: julia {
-        conda     = 'conda-forge::julia=1.6.2 bioconda::bam-readcount=0.8'
+        container = 'quay.io/millironx/julia_bam-readcounts'
     }
     withLabel: kraken {
         container = 'quay.io/staphb/kraken2:2.1.2-no-db'
