--- a/conf/containers.config
+++ b/conf/containers.config
@@ -20,7 +20,7 @@ process {
         container = 'quay.io/staphb/ivar:1.3'
     }
     withLabel: julia {
-        container = 'quay.io/millironx/julia_bam-readcounts'
+        container = 'quay.io/millironx/julia_bam-readcounts:35adec6'
     }
     withLabel: kraken {
         container = 'quay.io/staphb/kraken2:2.1.2-no-db'
