organization: Move haplotype calling to HapLink.jl (#2)
The ONT haplotype-calling framework was growing too large to maintain
within the context of YAVSAP, so move it to the external repository
https://github.com/ksumngs/HapLink.jl, and use it as a Julia dependency.

Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,13 +29,9 @@
         "pvalue",
         "Δlinkage"
     ],
-    "julia.environmentPath": "/home/tchristensen/src/jev-analysis-pipeline/bin",
-    "python.pythonPath": "/home/tchristensen/miniconda3/envs/jev-analysis-pipeline/bin/python",
     "files.associations": {
-        "*haplotype-finder": "julia",
-        "*variantfilter": "julia",
-        "*remove-invalid-reads": "julia",
-        "*make-haplotype-fastas": "julia",
+        "haplink": "julia",
+        "make-haplotype-fastas": "julia",
         "*.config": "nextflow"
     }
 }
