--- a/conf/containers.config
+++ b/conf/containers.config
@@ -1,9 +1,6 @@
 // Per-process container environments
 // Listed alphabetical, by the tool suite's name
 process {
-    withLabel: bam_readcount {
-        container = 'docker.io/mgibio/bam-readcount:latest'
-    }
     withLabel: canu {
         container = 'quay.io/staphb/canu:2.1.1'
     }
@@ -16,11 +13,8 @@ process {
     withLabel: fastqc {
         container = 'quay.io/staphb/fastqc:0.11.9'
     }
-    withLabel: ivar {
-        container = 'quay.io/staphb/ivar:1.3'
-    }
     withLabel: julia {
-        conda     = 'conda-forge::julia=1.6.2'
+        container = 'quay.io/millironx/julia_bam-readcounts:35adec6'
     }
     withLabel: kraken {
         container = 'quay.io/staphb/kraken2:2.1.2-no-db'
