Swap KrakenTools conda for container
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -20,7 +20,7 @@ process {
         container = 'quay.io/staphb/kraken2:2.1.2-no-db'
     }
     withLabel: krakentools {
-        conda     = 'bioconda::krakentools=1.2'
+        container = 'quay.io/biocontainers/krakentools:1.2--pyh5e36f6f_0'
     }
     withLabel: mafft {
         container = 'quay.io/staphb/mafft:7.475'
