Update MultiQC to use container instead of conda
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -29,7 +29,7 @@ process {
         container = 'docker.io/niemasd/minimap2_samtools:2.22_1.12'
     }
     withLabel: multiqc {
-        conda   = '-c bioconda -c conda-forge multiqc=1.11'
+        container = 'docker.io/ewels/multiqc:v1.11'
     }
     withLabel: nanofilt {
         container = 'quay.io/biocontainers/nanofilt:2.8.0--py_0'
