Swap Nanosim to use container instead of conda
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -35,7 +35,7 @@ process {
         container = 'quay.io/biocontainers/nanofilt:2.8.0--py_0'
     }
     withLabel: nanosim {
-        conda   = 'python=3.6 bioconda::nanosim=3.0.2 conda-forge::scikit-learn=0.21.3'
+        container = 'quay.io/biocontainers/nanosim:3.0.2--hdfd78af_0'
     }
     withLabel: raxml {
         container = 'docker.io/evolbioinfo/raxml-ng:v1.0.3'
