--- a/conf/containers.config
+++ b/conf/containers.config
@@ -47,7 +47,7 @@ process {
         container = 'quay.io/staphb/seqtk:1.3'
     }
     withLabel: seqret {
-        conda     = 'bioconda::emboss=6.6.0'
+        container = 'quay.io/biocontainers/emboss:6.6.0--h8719169_4'
     }
     withLabel: spades {
         container = 'quay.io/staphb/spades:3.15.2'
