Use a better NanoSim container
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -35,7 +35,7 @@ process {
         container = 'quay.io/biocontainers/nanofilt:2.8.0--py_0'
     }
     withLabel: nanosim {
-        container = 'quay.io/biocontainers/nanosim:3.0.2--hdfd78af_0'
+        container = 'quay.io/millironx/nanosim:5fcb2b6'
     }
     withLabel: raxml {
         container = 'docker.io/evolbioinfo/raxml-ng:v1.0.3'
