--- a/conf/containers.config
+++ b/conf/containers.config
@@ -20,7 +20,7 @@ process {
         container = 'quay.io/staphb/kraken2:2.1.2-no-db'
     }
     withLabel: krakentools {
-        conda     = 'bioconda::krakentools=1.2'
+        container = 'quay.io/biocontainers/krakentools:1.2--pyh5e36f6f_0'
     }
     withLabel: mafft {
         container = 'quay.io/staphb/mafft:7.475'
@@ -29,13 +29,13 @@ process {
         container = 'docker.io/niemasd/minimap2_samtools:2.22_1.12'
     }
     withLabel: multiqc {
-        conda   = '-c bioconda -c conda-forge multiqc=1.11'
+        container = 'docker.io/ewels/multiqc:v1.11'
     }
     withLabel: nanofilt {
         container = 'quay.io/biocontainers/nanofilt:2.8.0--py_0'
     }
     withLabel: nanosim {
-        conda   = 'python=3.6 bioconda::nanosim=3.0.2 conda-forge::scikit-learn=0.21.3'
+        container = 'quay.io/millironx/nanosim:3.0.2'
     }
     withLabel: raxml {
         container = 'docker.io/evolbioinfo/raxml-ng:v1.0.3'
@@ -47,7 +47,7 @@ process {
         container = 'quay.io/staphb/seqtk:1.3'
     }
     withLabel: seqret {
-        conda     = 'bioconda::emboss=6.6.0'
+        container = 'quay.io/biocontainers/emboss:6.6.0--h8719169_4'
     }
     withLabel: spades {
         container = 'quay.io/staphb/spades:3.15.2'
