parameterization: Allow modifying the number of bootstrap trees
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -57,6 +57,9 @@ params {
     haplotype_significance = 0.05
     haplotype_depth        = 10
 
+    // Phylogenetics options
+    phylogenetic_bootstraps = 1000
+
     // Boilerplate options
     outdir           = './results'
     tracedir         = "${params.outdir}/.trace"
