--- a/conf/test.config
+++ b/conf/test.config
@@ -45,6 +45,8 @@ profiles {
 
             haplotype_significance = 0.05
             haplotype_depth        = 2
+
+            phylogenetic_bootstraps = 100
         }
 
         process {
