--- a/conf/containers.config
+++ b/conf/containers.config
@@ -1,6 +1,9 @@
 // Per-process container environments
 // Listed alphabetical, by the tool suite's name
 process {
+    withLabel: blast {
+        container = 'docker.io/ncbi/blast:2.11.0'
+    }
     withLabel: canu {
         container = 'quay.io/staphb/canu:2.1.1'
     }
@@ -12,6 +15,9 @@ process {
     }
     withLabel: fastqc {
         container = 'quay.io/staphb/fastqc:0.11.9'
+    }
+    withLabel: ivar {
+        container = 'quay.io/staphb/ivar:1.3'
     }
     withLabel: julia {
         container = 'quay.io/millironx/julia_bam-readcounts:35adec6'
