Allow skipping FastQC
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -74,6 +74,7 @@ params {
 
     // Step-skipping options
     skip_trimming     = false
+    skip_qc           = false
     skip_filtering    = false
     skip_assembly     = false
     skip_haplotype    = false
