--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -73,6 +73,8 @@ params {
     max_time                     = '240.h'
 
     // Step-skipping options
+    skip_trimming     = false
+    skip_qc           = false
     skip_filtering    = false
     skip_assembly     = false
     skip_haplotype    = false
