Make blastdb creation more generic
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -10,6 +10,7 @@ params {
 
     // Reference genome options
     genome         = 'NC_001437.1' // JEV RefSeq
+    genome_list    = 'jev'
 
     // Kraken 2 options
     kraken2_db     = ''
