ci: Add caching for Singularity images
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,14 @@ jobs:
         with:
           singularity-version: 3.8
 
+      - name: Cache Singularity images
+        id: singularity-cache
+        if: ${{ env.RUN_CONTAINER == 'singularity' }}
+        uses: actions/cache@v2
+        with:
+          path: ~/.nxf-singularity-cache
+          key: singularity-${{ hashFiles('**/conf/containers.config') }}
+
       - name: Install Podman
         if: ${{ env.RUN_CONTAINER == 'podman' }}
         run: |
