ci: Add more skipping parameters to workflow
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,26 @@ jobs:
           - nxf_ver: ''
             nxf_edge: ''
             container_env: docker
+            skipping:  '--skip_trimming'
+            read_type: pe
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
+            skipping: '--skip_trimming'
+            read_type: ont
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
+            skipping:  '--skip_qc'
+            read_type: pe
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
+            skipping: '--skip_qc'
+            read_type: ont
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
             skipping: '--skip_filtering'
             read_type: pe
           - nxf_ver: ''
