--- a/conf/test.config
+++ b/conf/test.config
@@ -37,14 +37,14 @@ profiles {
             canu_min_overlap_length   = 50
             canu_stop_on_low_coverage = 3
 
-            variant_quality      = 10
-            variant_depth        = 2
+            variant_quality      = 12
+            variant_depth        = 10
             variant_position     = 0.1
-            variant_frequency    = 0.1
-            variant_significance = 0.05
+            variant_frequency    = 0.05
+            variant_significance = 1e-5
 
+            haplotype_depth        = 50
             haplotype_significance = 0.05
-            haplotype_depth        = 2
 
             phylogenetic_bootstraps = 100
         }
