Switch to haplink container instead of script
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -16,11 +16,11 @@ process {
     withLabel: fastqc {
         container = 'quay.io/staphb/fastqc:0.11.9'
     }
+    withLabel: haplink {
+        container = 'quay.io/millironx/haplink:0.0.1'
+    }
     withLabel: ivar {
         container = 'quay.io/staphb/ivar:1.3'
-    }
-    withLabel: julia {
-        container = 'quay.io/millironx/julia_bam-readcounts:35adec6'
     }
     withLabel: kraken {
         container = 'quay.io/staphb/kraken2:2.1.2-no-db'
