--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,6 +129,11 @@ jobs:
           mkdir ~/kraken2-db
           wget -qO- https://genome-idx.s3.amazonaws.com/kraken/k2_viral_20210517.tar.gz | tar xzv -C ~/kraken2-db
 
+      - name: Pull Singularity images
+        if: ${{ env.RUN_CONTAINER == 'singularity' }}
+        run: |
+          grep 'container =' ${GITHUB_WORKSPACE}/conf/containers.config | awk '{print $3}' | xargs -I {} -n1 singularity pull docker://{}
+
       - name: Run pipeline with test data
         env:
           NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
