Add default parameters for HapLink 0.4.x
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -48,7 +48,7 @@ params {
     spades_mode = 'rnaviral'
 
     // Variant calling options
-    variant_quality      = (params.pe) ? 30 : 21
+    variant_quality      = (params.pe) ? 30 : 12
     variant_depth        = (params.pe) ? 10 : 15
     variant_position     = 0.1
     variant_frequency    = 0.05
@@ -57,6 +57,10 @@ params {
     // Haplotyping options
     haplotype_significance = 0.05
     haplotype_depth        = 10
+    haplotype_method       = 'ml-template'
+    haplotype_overlap_min  = 0
+    haplotype_overlap_max  = 100
+    haplotype_iterations   = 1000
 
     // Phylogenetics options
     phylogenetic_bootstraps = 1000
