Add pbsim container definition
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -43,6 +43,9 @@ process {
     withLabel: nanosim {
         container = 'quay.io/millironx/nanosim:3.0.2'
     }
+    withLabel: pbsim {
+        container = 'docker.io/metagenlab/pbsim2:2.0.1'
+    }
     withLabel: raxml {
         container = 'docker.io/evolbioinfo/raxml-ng:v1.0.3'
     }
