ci: Separate 'test' profile from 'gh' profile
Trying to run the test pipeline on real hardware is a pain thanks to the
extremely restrictive hardware limits of GitHub actions that were hard-
coded into the 'test' profile. Place those limits in a separate profile
named 'gh', instead.

Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,4 +89,4 @@ jobs:
           NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
         run: |
           export NXF_SINGULARITY_CACHEDIR=$HOME/.nxf-singularity-cache
-          nextflow run ${GITHUB_WORKSPACE} -profile test,${RUN_READTYPE},${RUN_CONTAINER} $RUN_SKIPPING --kraken2_db ~/kraken2-db
+          nextflow run ${GITHUB_WORKSPACE} -profile test,gh,${RUN_READTYPE},${RUN_CONTAINER} $RUN_SKIPPING --kraken2_db ~/kraken2-db
