Add haplotype_frequency default parameter
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -57,6 +57,7 @@ params {
     // Haplotyping options
     haplotype_significance = 0.05
     haplotype_depth        = 10
+    haplotype_frequency    = 0.05
     haplotype_method       = 'ml-template'
     haplotype_overlap_min  = 0
     haplotype_overlap_max  = 100
