Add phylogenetic_bootstrap_cutoff parameter
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -64,7 +64,8 @@ params {
     haplotype_iterations   = 1000
 
     // Phylogenetics options
-    phylogenetic_bootstraps = 1000
+    phylogenetic_bootstraps       = 1000
+    phylogenetic_bootstrap_cutoff = 0.03
 
     // Boilerplate options
     outdir           = './results'
