Add a parameter that allows for setting the random seed
Fixes: [Feature]: Allow for setting of random seed #13
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -7,6 +7,7 @@ params {
     platform       = ''
     pe             = (params.platform == 'pe'  || params.platform == 'illumina')
     ont            = (params.platform == 'ont' || params.platform == 'nanopore')
+    seed           = 42
 
     // Reference genome options
     genome         = 'NC_001437.1' // JEV RefSeq
