--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: Install Sphinx 🇪🇬
         uses: logikal-code/pip-install@v1.0.0
         with:
