Add container definition for GNU Parallel/pigz processes
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -40,6 +40,9 @@ process {
     withLabel: nanofilt {
         container = 'quay.io/biocontainers/nanofilt:2.8.0--py_0'
     }
+    withLabel: parallelzip {
+        container = 'quay.io/millironx/parallelzip:latest'
+    }
     withLabel: pbsim {
         container = 'docker.io/metagenlab/pbsim2:2.0.1'
     }
