--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -7,6 +7,7 @@ params {
     platform       = ''
     pe             = (params.platform == 'pe'  || params.platform == 'illumina')
     ont            = (params.platform == 'ont' || params.platform == 'nanopore')
+    samplesheet    = null
     seed           = 42
 
     // Reference genome options
