--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -4,7 +4,7 @@ params {
     // Input options
     input          = '.'
     sra            = false
-    platform       = ''
+    platform       = null
     pe             = (params.platform == 'pe'  || params.platform == 'illumina')
     ont            = (params.platform == 'ont' || params.platform == 'nanopore')
     samplesheet    = null
@@ -15,7 +15,7 @@ params {
     genome_list    = 'jev'
 
     // Kraken 2 options
-    kraken2_db     = ''
+    kraken2_db     = null
     keep_taxid     = '0 10239' // 0 = Unclassified, 10239 = Viral
 
     // Read trimming options (shared)
