Replace `pe` parameter with `paired` parameter
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -5,7 +5,7 @@ params {
     input          = '.'
     sra            = false
     platform       = null
-    pe             = (params.platform == 'pe'  || params.platform == 'illumina')
+    paired         = (params.platform == 'illumina')
     ont            = (params.platform == 'ont' || params.platform == 'nanopore')
     samplesheet    = null
     seed           = 42
