Add interleaved parameter
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -6,6 +6,7 @@ params {
     sra            = false
     platform       = null
     paired         = (params.platform == 'illumina')
+    interleaved    = false
     samplesheet    = null
     seed           = 42
 
