--- a/conf/containers.config
+++ b/conf/containers.config
@@ -55,6 +55,9 @@ process {
     withLabel: samtools {
         container = 'quay.io/staphb/samtools:1.12'
     }
+    withLabel: seqkit {
+        container = 'quay.io/biocontainers/seqkit:2.1.0--h9ee0642_0'
+    }
     withLabel: seqtk {
         container = 'quay.io/staphb/seqtk:1.3'
     }
