--- a/nextflow.config
+++ b/nextflow.config
@@ -28,3 +28,4 @@ includeConfig 'conf/resources.config'
 includeConfig 'conf/environment.config'
 includeConfig 'conf/test.config'
 includeConfig 'conf/trace.config'
+includeConfig 'conf/modules.config'
