Add trimmomatic module
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -2,4 +2,14 @@ process {
     withName: 'SEQKIT_SPLIT2' {
         ext.args = '-p2'
     }
+    withName: 'TRIMMOMATIC' {
+        ext.clipFlag   = (params.trim_adapters && params.trim_mismatches && params.trim_pclip && params.trim_clip) ? "ILLUMINACLIP:/usr/local/share/trimmomatic-0.39-2/adapters/${params.trim_adapters}:${params.trim_mismatches}:${params.trim_pclip}:${params.trim_clip}" : ''
+        ext.winFlag    = (params.trim_winsize && params.trim_winqual) ? "SLIDINGWINDOW:${params.trim_winsize}:${params.trim_winqual}" : ''
+        ext.leadFlag   = (params.trim_leading) ? "LEADING:${params.trim_leading}" : ''
+        ext.trailFlag  = (params.trim_trailing) ? "TRAILING:${params.trim_trailing}" : ''
+        ext.cropFlag   = (params.trim_crop) ? "CROP:${params.trim_crop}" : ''
+        ext.headFlag   = (params.trim_headcrop) ? "HEADCROP:${params.trim_headcrop}" : ''
+        ext.minlenFlag = (params.trim_minlen) ? "MINLEN:${params.trim_minlen}" : ''
+        ext.args = [ext.clipFlag, ext.winFlag, ext.leadFlag, ext.trailFlag, ext.cropFlag, ext.headFlag, ext.minlenFlag].join(' ')
+    }
 }
