--- a/conf/modules.config
+++ b/conf/modules.config
@@ -12,4 +12,14 @@ process {
         ext.minlenFlag = (params.trim_minlen) ? "MINLEN:${params.trim_minlen}" : ''
         ext.args = [ext.clipFlag, ext.winFlag, ext.leadFlag, ext.trailFlag, ext.cropFlag, ext.headFlag, ext.minlenFlag].join(' ')
     }
+    withName: 'NANOFILT' {
+        ext.minlenflag = ( params.trim_minlen > 0 )   ? "--length ${params.trim_minlen}"     : ''
+        ext.maxlenflag = ( params.trim_maxlen > 0 )   ? "--maxlength ${params.trim_maxlen}"  : ''
+        ext.qualflag   = ( params.trim_meanqual > 0 ) ? "--quality ${params.trim_meanqual}"  : ''
+        ext.mingcflag  = ( params.trim_mingc > 0 )    ? "--minGC ${params.trim_mingc}"       : ''
+        ext.maxgcflag  = ( params.trim_maxgc > 0 )    ? "--maxGC ${params.trim_maxgc}"       : ''
+        ext.headflag   = ( params.trim_headcrop > 0 ) ? "--headcrop ${params.trim_headcrop}" : ''
+        ext.tailflag   = ( params.trim_tailcrop > 0 ) ? "--tailcrop ${params.trim_tailcrop}" : ''
+        ext.args = [ext.minlenflag, ext.maxlenflag, ext.qualflag, ext.mingcflag, ext.maxgcflag, ext.headflag, ext.tailflag].join(' ')
+    }
 }
