Add nf-core style module for krakentools extract
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -22,4 +22,7 @@ process {
         ext.tailflag   = ( params.trim_tailcrop > 0 ) ? "--tailcrop ${params.trim_tailcrop}" : ''
         ext.args = [ext.minlenflag, ext.maxlenflag, ext.qualflag, ext.mingcflag, ext.maxgcflag, ext.headflag, ext.tailflag].join(' ')
     }
+    withName: 'KRAKENTOOLS_EXTRACT' {
+        ext.args = '--include-children'
+    }
 }
