--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -5,32 +5,29 @@ profiles {
     docker {
         docker.enabled         = true
         docker.userEmulation   = true
-        docker.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro"
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
+        envWhitelist           = 'NCBI_API_KEY'
     }
     singularity {
         singularity.enabled    = true
         singularity.autoMounts = true
-        singularity.runOptions = "--bind ${params.kraken2_db}"
         docker.enabled         = false
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
+        envWhitelist           = 'NCBI_API_KEY'
     }
     podman {
         podman.enabled         = true
-        podman.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro,z"
         podman.mountFlags      = 'z'
         docker.enabled         = false
         singularity.enabled    = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
+        envWhitelist           = 'NCBI_API_KEY'
     }
 
     // Debug
