Add read alignment as a subworkflow
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,3 +1,5 @@
+def platform = params.platform
+
 process {
     withName: 'SEQKIT_SPLIT2' {
         ext.args = '-p2'
@@ -24,5 +26,14 @@ process {
     }
     withName: 'KRAKENTOOLS_EXTRACT' {
         ext.args = '--include-children'
+    }
+    withName: 'MINIMAP2_ALIGN' {
+        ext.args =
+            """\
+            ${(platform == 'nanopore') ? 'x map-ont' : (platform == 'illumina') ? '-ax sr' : ''} \\
+            -a \\
+            --MD \\
+            --eqx \
+            """
     }
 }
