Correct method flag for Nanopore in minimap args
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -30,7 +30,7 @@ process {
     withName: 'MINIMAP2_ALIGN' {
         ext.args =
             """\
-            ${(platform == 'nanopore') ? 'x map-ont' : (platform == 'illumina') ? '-ax sr' : ''} \\
+            ${(platform == 'nanopore') ? '-x map-ont' : (platform == 'illumina') ? '-ax sr' : ''} \\
             -a \\
             --MD \\
             --eqx \
