Add closest reference subworkflow
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -36,4 +36,11 @@ process {
             --eqx \
             """
     }
+    withName: 'IVAR_CONSENSUS' {
+        ext.args  = "-q ${params.variant_quality} -t ${params.variant_frequency} -m ${params.variant_depth}"
+        ext.args2 = "-aa -A -d 0 -Q 0"
+    }
+    withName: 'BLAST_BLASTN' {
+        ext.args = '-num_alignments 1 -outfmt "6 saccver"'
+    }
 }
