Add module file for CliqueSNV variant calling
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -43,4 +43,7 @@ process {
     withName: 'BLAST_BLASTN' {
         ext.args = '-num_alignments 1 -outfmt "6 saccver"'
     }
+    withName: 'CLIQUESNV_.*' {
+        ext.args = "-t ${params.haplotype_depth} -tf ${params.haplotype_frequency} -log"
+    }
 }
