Add module for HapLink variants
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -46,4 +46,13 @@ process {
     withName: 'CLIQUESNV_.*' {
         ext.args = "-t ${params.haplotype_depth} -tf ${params.haplotype_frequency} -log -fdf extended"
     }
+    withName: 'HAPLINK_VARIANTS' {
+        ext.args = """\
+            --quality ${params.variant_quality} \\
+            --frequency ${params.variant_frequency} \\
+            --position ${params.variant_position} \\
+            --significance ${params.variant_significance} \\
+            --depth ${params.variant_depth} \\
+            """
+    }
 }
